--- a/ERPWeb/Views/AgroConfiguration/CreateTerritorylist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateTerritorylist.cshtml
@@ -85,7 +85,7 @@
 
 @section scripts{
 
-    <script type="text/javascript">
+<script type="text/javascript">
 
         var ddlorgname = $("#ddlorgname");
         var ddlareaname = $("#ddlareaname");
@@ -190,7 +190,7 @@
                     debugger;
                     $('.toastrDefaultSuccess').trigger('click');
                     setTimeout(function () {
-                        redirectPage('@Url.Action("Territorylist")');
+                        redirectPage('@Url.Action("GetStockiestList", new {tab= "Territory" })');
                     }, 1000);
                 }
                 else {
@@ -231,5 +231,5 @@
 
         }
 
-    </script>
+</script>
 }
