--- a/ERPWeb/Views/AgroConfiguration/CreateZonelist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateZonelist.cshtml
@@ -12,7 +12,7 @@
 
                 <div class="row">
                     <div class="col-md-3">
-                        <a href="/AgroConfiguration/Zonelist" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
+                        <a href="/AgroConfiguration/GetStockiestList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
                             <i class="fas fa-arrow-alt-circle-left"></i>
                         </a>
                     </div>
@@ -192,7 +192,7 @@
                     debugger;
                     $('.toastrDefaultSuccess').trigger('click');
                     setTimeout(function () {
-                        redirectPage('@Url.Action("Zonelist")');
+                        redirectPage('@Url.Action("GetStockiestList",new {tab="Zone" })');
                     }, 1000);
                 }
                 else {
