--- a/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
@@ -83,7 +83,7 @@
                         <select class="form-control form-control-sm" id="ddlAction">
                             <option value="Approved" selected>Approved</option>
                             <option value="Rejected">Rejected</option>
-                            <option value="Pending">Pending</option>
+                        
                         </select>
                     </div>
                 </div>
@@ -138,13 +138,13 @@
 
 
 
-        //function LoadDataInitializer() {
-        //    LoadDataTable();
-        //}
+        function LoadDataInitializer() {
+            LoadDataTable();
+        }
 
-        //searchByAny.keyup(function () {
-        //    LoadDataTable()
-        //})
+        searchByAny.keyup(function () {
+            LoadDataTable()
+        })
 
         function LoadDataTable() {
             debugger;
