--- a/ERPWeb/Views/AgroConfiguration/_GetPendingFGProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetPendingFGProduct.cshtml
@@ -11,11 +11,12 @@
                 <tr class="text-center">
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
-                    <th style="vertical-align:middle" class="hide"></th>
+                    <th style="vertical-align:middle">PO Number</th>
                     <th style="vertical-align:middle">Product Name</th>
-                    <th style="vertical-align:middle">BatchCode</th>
+                    <th style="vertical-align:middle" class="hide">BatchCode</th>
                     <th style="vertical-align:middle">Product Details</th>
                     <th style="vertical-align:middle">Quantity</th>
+                    <th style="vertical-align:middle">Date</th>
                     <th style="vertical-align:middle">Status</th>
                     <th style="vertical-align:middle">Action</th>
                 </tr>
@@ -28,11 +29,12 @@
 
                         <td class="text-center text-bold">@SL</td>
                         <td class="hide">@item.FinishGoodProductInfoId</td>
-                        <td class="hide">@item.FinishGoodProductionBatch</td>
+                        <td class="text-center">@item.FinishGoodProductionBatch</td>
                         <td class="text-center">@item.FinishGoodProductName</td>
-                        <td class="text-center">@item.ReceipeBatchCode</td>
+                        <td class="hide">@item.ReceipeBatchCode</td>
                         <td class="text-center">@item.FGRQty@(" ("+@item.UnitName+" )")</td>
                         <td class="text-center">@item.TargetQuantity</td>
+                        <td class="text-center">@item.EntryDate</td>
                         <td class="text-center">@item.Status</td>
                         <td class="text-center">
                             <a href="#" class="btn btn-warning btn-sm data-edit-item-Return" style="line-height:1" data-edit-item-Return="@item.FinishGoodProductionBatch"><i class="fa fa-pen"></i> Approve</a>
