--- a/ERPWeb/Views/AgroConfiguration/_GetProductFinishGoodDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetProductFinishGoodDetails.cshtml
@@ -21,7 +21,7 @@
                 <th style="vertical-align:middle">#SL</th>
                 <th style="vertical-align:middle">Material Name</th>
                 <th style="vertical-align:middle">Quantity</th>
-                <th style="vertical-align:middle">Status</th>
+                <th class="hide">Status</th>
                 <th style="vertical-align:middle">Entry Date</th>
 
             </tr>
@@ -39,7 +39,7 @@
 
                         <td class="text-center">@item.RawMaterialName</td>
                         <td class="text-center">@item.RequiredQuantity</td>
-                        <td class="text-center">@item.Status</td>
+                        <td class="hide">@item.Status</td>
                         <td class="text-center">@item.EntryDate</td>
                         <td class="hide">@item.RawMaterialId</td>
                     </tr>
