--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -19,12 +19,12 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <h5 class="text-center text-bold">
-                                                    List Of Agro Sales Product
+                                                    List Of Invoice & Challan
                                                 </h5>
                                             </div>
                                             <div class="col-md-3">
 
-                                                <a href="/AgroConfiguration/CreateAgroSalesProduct" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Sales Product</a>
+                                                <a href="/AgroConfiguration/CreateAgroSalesProduct" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Invoice</a>
 
                                             </div>
                                         </div>
