--- a/ERPWeb/Views/AgroConfiguration/_GetSalesReturnReportList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetSalesReturnReportList.cshtml
@@ -14,36 +14,37 @@
             <th style="vertical-align:middle" class="hide"></th>
             <th style="vertical-align:middle">Return Date</th>
             <th style="vertical-align:middle">InvoiceNo</th>
-            <th style="vertical-align:middle">Product Name</th>
             <th style="vertical-align:middle">Stockiest Name</th>
+            <th style="vertical-align:middle">Product Name</th>
             <th style="vertical-align:middle">Measurement Size</th>
             <th style="vertical-align:middle">Box Qty</th>
+            <th style="vertical-align:middle">Return Qty</th>
             <th style="vertical-align:middle">Return UnitPrice</th>
-            <th style="vertical-align:middle">Status</th>
             <th style="vertical-align:middle">Total Price</th>
-           
+            <th style="vertical-align:middle">Status</th>
+
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             sl = sl + 1;
-            <tr>
-                <td class="text-center text-bold">@sl</td>
-                <td class="hide">@item.SalesReturnId</td>
-                <td class="text-center">@item.ReturnDate.Value.ToString("dd-MMM-yyyy")</td>
-                <td class="text-center">@item.InvoiceNo</td>
-                <td class="text-center">@item.FinishGoodProductName</td>
-                <td class="text-center">@item.StockiestName</td>
-                <td class="text-center">@item.MeasurementSize</td>
-                <td class="text-center">@item.BoxQuanity</td>
-                <td class="text-center">@item.ReturnPerUnitPrice</td>
-                <td class="text-center">@item.Status</td>
-                <td class="text-center">@item.ReturnTotalPrice</td>
-               
+        <tr>
+            <td class="text-center text-bold">@sl</td>
+            <td class="hide">@item.SalesReturnId</td>
+            <td class="text-center">@item.ReturnDate.Value.ToString("dd-MMM-yyyy")</td>
+            <td class="text-center">@item.InvoiceNo</td>
+            <td class="text-center">@item.StockiestName</td>
+            <td class="text-center">@item.FinishGoodProductName</td>
 
-                
-            </tr>
+            <td class="text-center">@item.MeasurementSize</td>
+            <td class="text-center">@item.BoxQuanity</td>
+            <td class="text-center">@item.ReturnQuanity</td>
+            <td class="text-center">@item.ReturnPerUnitPrice</td>
+            <td class="text-center">@item.ReturnTotalPrice</td>
+            <td class="text-center">@item.Status</td>
+
+        </tr>
         }
         @if (Model.Count() == 0)
         {
